# TLAC-MODERN-LOCAL-ANTI-CHEAT-REUNIONED

./: .gitignore  Cargo.toml  LICENSE  READ.md  README.md  install.sh  lib.rs
.github/workflows/: ci.yml
bpf/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .tlac_kernel.ko.cmd  .tlac_kernel.mod.cmd  .tlac_kernel.mod.o.cmd  .tlac_kernel.o.cmd  Makefile  program.bpf.c  tlac_kernel.c
kernel/: Makefile  tlac_kernel.c
scripts/: anomaly_model.onnx  anomaly_model.pkl  convert_to_onnx.py  requirements.txt  train_model.py
src/: ai.rs  ebpf.rs  install.sh  lib.rs  main.rs  messages.rs  proc_status.rs  server.rs  signatures.json  sync_client.rs  uninstall.sh
src/ai/: features.rs  model.rs
