[package]
name = "anti-cheat"
version = "4.0.0"
edition = "2021"
authors = ["TuncorReUnion"]
description = "TLAC - Tuncor's Local Anti-Cheat"
license = "MIT"
repository = "https://github.com/TuncorReUnion/TLAC-MODERN-LOCAL-ANTI-CHEAT-REUNIONED"

[[bin]]
name = "anti-cheat"
path = "src/main.rs"

[lib]
name = "anti_cheat"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
nix = { version = "0.29", features = ["ptrace", "process"] }
procfs = "0.17"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
aya = "0.14.0"
log = "0.4"
ort = "2.0.0"
ndarray = "0.15"
env_logger = "0.11"
