[package]
name = "anti-cheat"
version = "4.0.0"
edition = "2021"
authors = ["TuncorReUnion"]
description = "TLAC - Tuncor's Local Anti-Cheat"
license = "MIT"
repository = "https://github.com/TuncorReUnion/TLAC-MODERN-LOCAL-ANTI-CHEAT-REUNIONED"

[[bin]]
name = "anti-cheat"
path = "src/main.rs"

[lib]
name = "anti_cheat"
path = "src/lib.rs"

[dependencies]
nix = { version = "0.31", features = ["process", "ptrace"] }
procfs = "0.17"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
env_logger = "0.11"
aya = "0.14.0"
bytes = "1"
libudev = "0.3"
