[package]
name = "tlac"
version = "8.0.0"
edition = "2021"
authors = ["TuncorReUnion"]
description = "Tuncor's Local Anti-Cheat - User-space + eBPF + AI powered anti-cheat for Linux"
license = "MIT"
repository = "https://github.com/TuncorReUnion/TLAC-MODERN-LOCAL-ANTI-CHEAT-REUNIONED"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
rusqlite = "0.31"
nix = { version = "0.27", features = ["ptrace", "process"] }
procfs = "0.16"
libudev = "0.3"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
bytes = "1.5"
aya = "0.12"
tract-onnx = "0.19"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"  # ✅ YENİ EKLENDİ

[build-dependencies]
aya = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[features]
default = []
ebpf = []
server = []
